--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3022,7 +3022,7 @@ input, select, textarea {
 				-webkit-transition: opacity 1s ease;
 				-ms-transition: opacity 1s ease;
 				transition: opacity 1s ease;
-				background: rgba(49, 36, 80, 0.9);
+				background: rgba(49, 36, 80, 0.9); 
 				content: '';
 				display: block;
 				height: 100%;
@@ -3064,10 +3064,10 @@ input, select, textarea {
 			}
 
 		.spotlights > section:nth-child(2) {
-			background-color: rgba(0, 0, 0, 0.05);
+			background-color: rgba(0, 0, 0, 0.1);
 		}
 
-		.spotlights > section:nth-child(3) {
+		.spotlights > section:nth-child(4) {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
 
@@ -3240,27 +3240,27 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #ec6f00;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #454545;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #454545;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #000000; 
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #F29727;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #F29727;
 		}
 
 		.wrapper.fullscreen {
@@ -3504,7 +3504,7 @@ input, select, textarea {
 		}
 
 	#footer > .inner a {
-		border-bottom-color: rgba(255, 255, 255, 0.15);
+		border-bottom-color: rgba(255, 255, 255, 0.35);
 	}
 
 		#footer > .inner a:hover {
@@ -3513,7 +3513,7 @@ input, select, textarea {
 
 	#footer > .inner .menu {
 		font-size: 0.8em;
-		color: rgba(255, 255, 255, 0.15);
+		color: rgba(255, 255, 255, 0.35);
 	}
 
 	#header + #wrapper + #footer > .inner {
@@ -3765,10 +3765,10 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #FF6600);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #FF6600);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #FF6600);
-				background-image: linear-gradient(to right, #5e42a6, #FF6600);
+				background-image: -moz-linear-gradient(to right, #5e42a6, #ec6f00);
+				background-image: -webkit-linear-gradient(to right, #5e42a6, #ec6f00);
+				background-image: -ms-linear-gradient(to right, #5e42a6, #ec6f00);
+				background-image: linear-gradient(to right, #5e42a6, #ec6f00);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
