--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3256,11 +3256,11 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #F29727;
+			background-color: #ec6f00;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #F29727;
+			background-color: #454545;
 		}
 
 		.wrapper.fullscreen {
